<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@id/feedFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/bottom_nav_feed" />

    <item
        android:id="@id/mapFragment"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/bottom_nav_map" />

    <item
        android:id="@id/createPostFragment"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/bottom_nav_create" />

    <item
        android:id="@id/externalRecipesFragment"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/bottom_nav_recipes" />

    <item
        android:id="@id/profileFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/bottom_nav_profile" />

</menu>
